# Auric

./: CMakeLists.txt  CMakePresets.json  README.md  Windows.md  auric.yaml  config.cpp  frontend.cpp  frontend.hpp  machine.cpp  machine.hpp  memory.cpp  oric.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: linux-build-and-test.yml
ROMS/: README_ROMS.md
chip/: mos6502.hpp  ula.hpp
doc/: BUILD_HOST.md  BUILD_VCPKG.md  ay3_8912.md  mos6502.md  mos6522.md  mos6522_via_timing_notes.md  ula.md
fonts/: printfont.py
frontends/sdl/: CMakeLists.txt  frontend.cpp  status_bar.cpp  status_bar.hpp  texture.cpp  texture.hpp
src/: CMakeLists.txt  config.cpp  config.hpp  machine.cpp  machine.hpp  main.cpp  memory.cpp  memory.hpp  monitor.cpp  monitor.hpp  oric.cpp  oric.hpp  snapshot.cpp  snapshot.hpp
src/chip/: CMakeLists.txt  ay3_8912.cpp  ay3_8912.hpp  memory_interface.hpp  mos6502.cpp  mos6502.hpp  mos6502_cycles.hpp  mos6502_opcodes.hpp  mos6522.cpp  mos6522.hpp  ula.cpp  ula.hpp  wd1793.cpp  wd1793.hpp
src/disk/: CMakeLists.txt  disk.hpp  disk_image.cpp  disk_image.hpp  disk_microdrive.cpp  disk_microdrive.hpp  disk_none.cpp  disk_none.hpp  drive.hpp  drive_microdrive.cpp  drive_microdrive.hpp  drive_none.cpp  drive_none.hpp  tape_none.cpp
src/frontends/: CMakeLists.txt  flags.hpp
src/frontends/gui/: CMakeLists.txt  gui.cpp  gui.hpp  memory_map_window.cpp  memory_map_window.hpp
src/frontends/gui/imgui/: CMakeLists.txt
src/frontends/gui/imgui/backends/: CMakeLists.txt  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer2.h
src/frontends/imgui/: CMakeLists.txt
src/frontends/imgui/backends/: CMakeLists.txt  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h
src/frontends/sdl/: CMakeLists.txt  file_dialog.hpp  frontend.cpp  frontend.hpp  gl_loader.hpp  gl_screen_program.cpp  status_bar.cpp  status_bar.hpp  texture.cpp  texture.hpp
src/tape/: CMakeLists.txt  tape.hpp  tape_blank.cpp  tape_blank.hpp  tape_tap.cpp  tape_tap.hpp
taps/: 2048.tap  4KKong.tap  DEFENDER.TAP  DOGGY.TAP  SkoolDaze10.tap
tests/: 6502_test.cpp  6522_test.cpp  6522_test.hpp  6522_test_control_registers.cpp  6522_test_counters.cpp  6522_test_registers.cpp  6522_test_shift_registers.cpp  6522_test_t1.cpp  6522_test_t2.cpp  CMakeLists.txt
tests/mocks/: test_machine.cpp  test_machine.h
